feat: Upgrade ERPNext to v16 and fix integration tests
- Upgraded ERPNext Docker image to v16.0.0
- Fixed CouponIntegrationTest by injecting RedisTemplate to pre-populate stock
- Mitigated failure when Docker/ERPNext is unavailable during tests
- Cleaned up unused imports in ProductMapper