@@ -1,149 +1,134 @@
 package com.app.cart;
 
-import com.app.order.services.ERPNextService;
-
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
 import com.app.cart.mappers.CartMapper;
+import com.app.cart.services.CartCouponService;
 import com.app.product.ProductService;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import com.app.order.entites.Cart;
-import com.app.order.entites.CartItem;
+import com.app.order.entities.Cart;
+import com.app.order.entities.CartItem;
 import com.app.core.APIException;
 import com.app.core.ResourceNotFoundException;
-import com.app.order.payloads.CartDTO;
+import com.app.cart.payloads.CartDTO;
 import com.app.product.payloads.ProductDTO;
 import com.app.order.repositories.CartItemRepo;
 import com.app.order.repositories.CartRepo;
 
+import com.app.commerce.pricing.OrderTotalService;
+import com.app.inventory.InventoryReservationService;
 import org.springframework.transaction.annotation.Transactional;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
+
+@Log4j2
+@RequiredArgsConstructor
 @Transactional(readOnly = true)
 @Service
 public class CartServiceImpl implements CartService {
 
-	@Autowired
-	private CartRepo cartRepo;
-
-	@Autowired
-	private ProductService productService;
-
-	@Autowired
-	private CartItemRepo cartItemRepo;
-
-	@Autowired
-	private CartMapper cartMapper;
-
-	@Autowired
-	private com.app.commerce.pricing.OrderTotalService orderTotalService;
-
-	@Autowired
-	private com.app.inventory.InventoryReservationService inventoryReservationService;
+	private final CartRepo cartRepo;
+	private final ProductService productService;
+	private final CartItemRepo cartItemRepo;
+	private final CartMapper cartMapper;
+	private final OrderTotalService orderTotalService;
+	private final InventoryReservationService inventoryReservationService;
+	private final CartCouponService cartCouponService;
 
 	@Override
 	@Transactional
 	public CartDTO addProductToCart(Long cartId, Long productId, String itemCode, Integer quantity) {
 
-		Cart cart = cartRepo.findById(cartId)
+		var cart = cartRepo.findById(cartId)
 				.orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
 
-		ProductDTO product = productService.getProductById(productId);
+		var product = productService.getProductById(productId);
 		if (product == null)
 			throw new ResourceNotFoundException("Product", "productId", productId);
 
-		String effectiveItemCode = (itemCode != null && !itemCode.isEmpty()) ? itemCode : product.getItemCode();
+		var effectiveItemCode = (itemCode != null && !itemCode.isEmpty()) ? itemCode : product.itemCode();
 
-		CartItem cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
-		// If we support multiple variants of same product in cart, we should check by
-		// productId + itemCode.
-		// For PoC, let's just check if this specific itemCode + productId + cartId
-		// exists.
-		// Actually the current repo only has findCartItemByProductIdAndCartId.
+		var cartItem = cartItemRepo.findCartItemByProductIdAndCartIdAndItemCode(cartId, productId,
+				effectiveItemCode);
 
 		if (cartItem != null && cartItem.getItemCode().equals(effectiveItemCode)) {
 			throw new APIException("Item with code " + effectiveItemCode + " already exists in the cart");
 		}
 
-        // Use Redis Check (Async Write-Behind compatible)
+		// Use Redis Check (Async Write-Behind compatible)
 		if (!inventoryReservationService.checkStock(effectiveItemCode, quantity)) {
 			throw new APIException("Insufficient stock for " + effectiveItemCode);
 		}
 
-		CartItem newCartItem = new CartItem();
-		newCartItem.setProductId(product.getProductId());
-		newCartItem.setProductName(product.getProductName());
+		var newCartItem = new CartItem();
+		newCartItem.setProductId(product.productId());
+		newCartItem.setProductName(product.productName());
 		newCartItem.setItemCode(effectiveItemCode);
 		newCartItem.setCart(cart);
 		newCartItem.setQuantity(quantity);
-		newCartItem.setDiscount(product.getDiscount());
-		newCartItem.setProductPrice(product.getSpecialPrice());
+		newCartItem.setDiscount(product.discount());
+		newCartItem.setProductPrice(product.specialPrice());
 
 		cartItemRepo.save(newCartItem);
 
-        // Recalculate using Pipeline
-        // Need to add item to list first for calculation, but it is saved above.
-        // We need to fetch cart again or just trust JPA update?
-        // Let's rely on JPA to refresh or manual add for transient calc.
-        // cart.getCartItems().add(newCartItem); // Already linked via JPA save?
-        // To be safe, reload or ensure consistency.
-        
-        com.app.commerce.pricing.contracts.OrderSummary summary = orderTotalService.calculate(cart);
+		// To be safe, reload or ensure consistency for calculation.
+		cart = cartRepo.findById(cartId).orElse(cart);
+
+		var summary = orderTotalService.calculate(cart);
 		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
 		cartRepo.save(cart);
 
-		CartDTO cartDTO = cartMapper.cartToCartDTO(cart);
-		populateProductDetails(cartDTO, cart);
+		// var cartDTO = cartMapper.cartToCartDTO(cart);
+		// populateProductDetails(cartDTO, cart);
 
-		return cartDTO;
+		var products = getCartProducts(cart);
+		return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
 	}
 
 	@Override
-	public org.springframework.data.domain.Page<CartDTO> getAllCarts(org.springframework.data.domain.Pageable pageable) {
-		org.springframework.data.domain.Page<Cart> carts = cartRepo.findAll(pageable);
+	public Page<CartDTO> getAllCarts(Pageable pageable) {
+		var carts = cartRepo.findAll(pageable);
 		return carts.map(cart -> {
-			CartDTO dto = cartMapper.cartToCartDTO(cart);
-			populateProductDetails(dto, cart);
-			return dto;
+			var products = getCartProducts(cart);
+			return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
 		});
 	}
 
 	@Override
 	public CartDTO getCart(String emailId, Long cartId) {
-		Cart cart = cartRepo.findCartByEmailAndCartId(emailId, cartId);
+		var cart = cartRepo.findCartByEmailAndCartId(emailId, cartId);
 		if (cart == null)
 			throw new ResourceNotFoundException("Cart", "cartId", cartId);
-		
-        // Optional: Recalculate on View to ensure freshness
-        com.app.commerce.pricing.contracts.OrderSummary summary = orderTotalService.calculate(cart);
+
+		// Optional: Recalculate on View to ensure freshness
+		var summary = orderTotalService.calculate(cart);
 		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
-        // Don't save on read, just show? Or save to keep sync?
-        // For now, simple return.
-        
-		CartDTO cartDTO = cartMapper.cartToCartDTO(cart);
-		populateProductDetails(cartDTO, cart);
-		return cartDTO;
+
+		// var cartDTO = cartMapper.cartToCartDTO(cart);
+		// populateProductDetails(cartDTO, cart);
+		var products = getCartProducts(cart);
+		return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
 	}
 
 	@Override
 	@Transactional
 	public void updateProductInCarts(Long cartId, Long productId) {
 		// Logic to update price if product changed globally
-		CartItem cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
+		var cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
 		if (cartItem != null) {
-			ProductDTO product = productService.getProductById(productId);
+			var product = productService.getProductById(productId);
 			if (product != null) {
-				cartItem.setProductPrice(product.getSpecialPrice());
+				cartItem.setProductPrice(product.specialPrice());
 				cartItemRepo.save(cartItem);
-                
-                // Recalculate Cart Total
-                Cart cart = cartItem.getCart();
-                com.app.commerce.pricing.contracts.OrderSummary summary = orderTotalService.calculate(cart);
-		        cart.setTotalPrice(summary.getFinalTotal().doubleValue());
-                cartRepo.save(cart);
+
+				// Recalculate Cart Total
+				var cart = cartItem.getCart();
+				var summary = orderTotalService.calculate(cart);
+				cart.setTotalPrice(summary.getFinalTotal().doubleValue());
+				cartRepo.save(cart);
 			}
 		}
 	}
@@ -151,14 +136,14 @@ public class CartServiceImpl implements CartService {
 	@Override
 	@Transactional
 	public CartDTO updateProductQuantityInCart(Long cartId, Long productId, String itemCode, Integer quantity) {
-		Cart cart = cartRepo.findById(cartId)
+		var cart = cartRepo.findById(cartId)
 				.orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
 
-		CartItem cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
+		var cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
 		if (cartItem == null)
 			throw new ResourceNotFoundException("CartItem", "productId", productId);
 
-		String effectiveItemCode = (itemCode != null && !itemCode.isEmpty()) ? itemCode : cartItem.getItemCode();
+		var effectiveItemCode = (itemCode != null && !itemCode.isEmpty()) ? itemCode : cartItem.getItemCode();
 
 		if (!inventoryReservationService.checkStock(effectiveItemCode, quantity)) {
 			throw new APIException("Insufficient stock for " + effectiveItemCode);
@@ -168,42 +153,84 @@ public class CartServiceImpl implements CartService {
 		cartItem.setItemCode(effectiveItemCode);
 		cartItemRepo.save(cartItem);
 
-        // Recalculate Pipeline
-        com.app.commerce.pricing.contracts.OrderSummary summary = orderTotalService.calculate(cart);
+		// Recalculate Pipeline
+		var summary = orderTotalService.calculate(cart);
 		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
 		cartRepo.save(cart);
 
-		CartDTO cartDTO = cartMapper.cartToCartDTO(cart);
-		populateProductDetails(cartDTO, cart);
-		return cartDTO;
+		// var cartDTO = cartMapper.cartToCartDTO(cart);
+		// populateProductDetails(cartDTO, cart);
+		var products = getCartProducts(cart);
+		return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
 	}
 
 	@Override
 	@Transactional
 	public String deleteProductFromCart(Long cartId, Long productId) {
-		Cart cart = cartRepo.findById(cartId)
+		var cart = cartRepo.findById(cartId)
 				.orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
-		CartItem cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
+		var cartItem = cartItemRepo.findCartItemByProductIdAndCartId(cartId, productId);
 		if (cartItem == null)
 			throw new ResourceNotFoundException("Product", "productId", productId);
 
 		cartItemRepo.delete(cartItem);
-        
-        // Remove from list for calculation accuracy if not automatically synched
-        cart.getCartItems().remove(cartItem); 
-        
-        // Recalculate Pipeline
-        com.app.commerce.pricing.contracts.OrderSummary summary = orderTotalService.calculate(cart);
+
+		// Remove from list for calculation accuracy if not automatically synched
+		cart.getCartItems().remove(cartItem);
+
+		// Recalculate Pipeline
+		var summary = orderTotalService.calculate(cart);
 		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
 		cartRepo.save(cart);
 
 		return "Product removed from the cart";
 	}
 
-	private void populateProductDetails(CartDTO cartDTO, Cart cart) {
-		List<ProductDTO> products = cart.getCartItems().stream()
+	@Override
+	@Transactional
+	public CartDTO applyCoupon(Long cartId, String couponCode) {
+		var cart = cartRepo.findById(cartId)
+				.orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
+
+		// 1. Explicit Validation via CartCouponService
+		// This will throw APIException if invalid
+		var currentSubtotal = cart.getCartItems().stream()
+				.mapToDouble(item -> item.getProductPrice() * item.getQuantity())
+				.sum();
+		cartCouponService.applyCouponToCart(couponCode, currentSubtotal);
+
+		// 2. Persist code
+		cart.setCouponCode(couponCode);
+
+		// 3. Recalculate using full pricing pipeline
+		var summary = orderTotalService.calculate(cart);
+		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
+		cartRepo.save(cart);
+
+		var products = getCartProducts(cart);
+		return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
+	}
+
+	@Override
+	@Transactional
+	public CartDTO removeCoupon(Long cartId) {
+		var cart = cartRepo.findById(cartId)
+				.orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
+
+		cart.setCouponCode(null);
+
+		// Recalculate
+		var summary = orderTotalService.calculate(cart);
+		cart.setTotalPrice(summary.getFinalTotal().doubleValue());
+		cartRepo.save(cart);
+
+		var products = getCartProducts(cart);
+		return new CartDTO(cart.getCartId(), cart.getTotalPrice(), products);
+	}
+
+	private List<ProductDTO> getCartProducts(Cart cart) {
+		return cart.getCartItems().stream()
 				.map(p -> productService.getProductById(p.getProductId()))
-				.collect(Collectors.toList());
-		cartDTO.setProducts(products);
+				.toList();
 	}
 }
